--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -166,38 +166,7 @@
             {{/if}}
           </div>
           {{#if ../loggedIn}}
-            <div id="replyForm">
-              <div class="input-group">
-                <textarea class="form-control form-control-sm comment-textarea" id="commentContent" name="commentContent" style="resize: none;" placeholder="Write a comment." maxlength="9000"></textarea>
-                <div class="input-group-append">
-                  <button type="submit" class="btn btn-primary btn-block h-100 btn-sm btn-fade postReply" id="{{this._id}}">Reply <i class="fas fa-chevron-right"></i></button>
-                </div>
-                
-              </div>
-              
-              <div class="form-row my-2 input-group replyEmojiWindow">
-    <div style="margin-right:.5rem;display:inline;">Click to add:</div>
-    <div class="replyEmoji">🍭</div>
-    <div class="replyEmoji">🍬</div>
-    <div class="replyEmoji">👍</div>
-    <div class="replyEmoji">👎</div>
-    <div class="replyEmoji">😀</div>
-    <div class="replyEmoji">😎</div>
-    <div class="replyEmoji">😍</div>
-    <div class="replyEmoji">🤨</div>
-    <div class="replyEmoji">😑</div>
-    <div class="replyEmoji">😶</div>
-    <div class="replyEmoji">🙃</div>
-    <div class="replyEmoji">👻</div>
-    <div class="replyEmoji">🐶</div>
-    <div class="replyEmoji">🐱</div>
-    <div class="replyEmoji">🌞</div>
-    <div class="replyEmoji">🌝</div>
-    <div class="replyEmoji">❤️</div>
-    <div class="replyEmoji">💯</div>
-    <div class="replyEmoji">🏳️‍🌈</div>
-  </div><button type="button" class="btn btn-primary btn-fade replyEmojiWindowButton"><i class="far fa-smile"></i></button>
-            </div>
+            {{> newreplyform }}
           {{/if}}
         </div>
       {{/unless}}
@@ -367,21 +336,14 @@
             </div>
             {{#if ../loggedIn}}
               {{#unless ../isMuted}}
-                <div id="replyForm">
-                  <div class="input-group">
-                    <textarea class="form-control form-control-sm comment-textarea" id="commentContent" name="commentContent" style="resize: none;" placeholder="Write a comment." maxlength="9000"></textarea>
-                    <div class="input-group-append">
-                      <button type="submit" class="btn btn-primary btn-block h-100 btn-sm btn-fade postReply" id="{{this._id}}">Reply <i class="fas fa-chevron-right"></i></button>
-                    </div>
-                  </div>
-                </div>
+                {{> newreplyform }}
               {{/unless}}
             {{/if}}
           </div>
         {{/unless}}
         </article>
     {{else}}
-      {{!-- SECTION: Community post and the user is NOT a member of this community --}}
+      {{!-- SECTION: Community post and the user is NOT a member of this community (we don't show the new comment form here)--}}
       {{#eq ../context "community"}}
         {{!-- SECTION: So we only show it if you're in the community --}}
         <article class="comment commentContainer" data-post-id="{{this._id}}">
