--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -8,7 +8,7 @@ $(function() {
     $("#postContentWarningsContainer").slideToggle("fast");
   })
   $("#emojiWindowButton").click(function(){
-    $("#emojiWindow").slideToggle("fast");
+    $("#emojiWindow").slideToggle("fast")
   })
   $(".emoji").click(function(){
     var ourTextBox = $("#postContent")[0];
