--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,19 +15,21 @@
 
 @media (max-width: 575.98px) {
   #topPostControlsRow,
-  #bottomPostControlsRow {
+  #bottomPostControlsRow,
+  #replyControlsRow {
     flex-direction: column;
     align-content: flex-start;
     align-items: flex-start !important;
   }
   #topPostControlsRow>div,
-  #bottomPostControlsRow>div {
+  #bottomPostControlsRow>div,
+  #replyControlsRow>div {
     margin-bottom: 5px;
   }
-  #leftSideControls {
+  .leftSideControls {
     order: 1;
   }
-  #rightSideControls {
+  .rightSideControls {
     order: 2;
   }
   #emojiWindowButton{
@@ -215,6 +217,11 @@ hr {
   align-items: center;
 }
 
+#replyControlsRow {
+  justify-content: space-between;
+  align-items: center;
+}
+
 #resultsContainer,
 #directoryResults,
 .commentsList {
@@ -287,7 +294,7 @@ hr {
     padding-bottom: 10px;
 }
 
-#replyForm {
+.replyForm {
   padding: 0 15px 10px 15px;
 }
 
@@ -493,29 +500,22 @@ hr {
   display: none;
 }
 
-#emojiWindow {
-  display:none;
-  cursor:default;
-  border:1px solid #ffffff;
-  border-radius:.25rem;
-}
-
+#emojiWindow,
 .replyEmojiWindow {
-  display:none;
+  display: flex;
   cursor:default;
-  border-radius:.25rem;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-.emoji{
-  display:inline;
+.emoji {
+  padding: 2px 0.15rem 0 0.15rem;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
-.replyEmoji{
-  display:inline;
-}
-
-.replyEmojiWindowButton{
-  margin-top: .5rem;
+.emoji:hover {
+  border-color: #ddd;
 }
 
 .content-warning {
@@ -674,6 +674,11 @@ hr {
   border-color: #9b9b9b;
 }
 
+.custom-file-container {
+  margin-top: 1rem !important;
+  margin-bottom: 0.5rem !important;
+}
+
 .custom-file-container__image-clear {
     background-color: #ffffff99;
     color: #000000;
@@ -687,8 +692,7 @@ hr {
 }
 
 .custom-file-container__image-preview {
-  margin-top: 1rem !important;
-  margin-bottom: 0.5rem !important;
+  background-color: #edede8 !important;
 }
 
 
