--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,25 +1,21 @@
 <nav class="navbar navbar-light fixed-top" id="topNav">
-  <!-- <a class="navbar-brand" href="/" id="navTitle">s</a> -->
-  <!-- <ul class="nav" id="navbarMenuMobile">
-
-  </ul> -->
 
   <ul class="nav" id="navbarMenuMobile" role='navigation'>
     {{#if loggedIn }}
       <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><img class="nav-icon" data-icon-name="home" src="/icons/home.svg" /><span class="screenreader-text"> Home</span></a>
+        <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span><span class="screenreader-text"> Home</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'notifications'}} active{{/eq}}" href="/notifications" id="notificationsPageLink"><img class="nav-icon" data-icon-name="notifications" src="/icons/notifications.svg" /> <span class="screenreader-text"> Notifications </span><span class="badge badge-secondary badge-pill notifications-count" style="position:relative;top:-1px;"></span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><img class="nav-icon" data-icon-name="communities" src="/icons/communities.svg" /><span class="screenreader-text"> Communities</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><img class="nav-icon" data-icon-name="search" src="/icons/search.svg" /><span class="screenreader-text"> Search</span></a>
+        <a class="nav-link{{#eq activePage 'notifications'}} active{{/eq}}" href="/notifications" id="notificationsPageLink"><span class="navbar-icon-notifications"></span><span class="screenreader-text"> Notifications </span><span class="badge badge-secondary badge-pill notifications-count" style="position:relative;top:-1px;"></span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link{{#eq activePage loggedInUserData.username}} active{{/eq}}" href="/{{loggedInUserData.username}}"><img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="screenreader-text"> Profile</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="screenreader-text"> Communities</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span><span class="screenreader-text"> Search</span></a>
       </li>
     {{else}}
       <li class="nav-item">
@@ -31,26 +27,24 @@
     {{/if}}
   </ul>
 
-  <ul class="nav ml-auto" id="navbarMenuDesktop">
+  <ul class="nav ml-auto col-8" id="navbarMenuDesktop">
+    <!-- <a class="navbar-brand" href="/" id="navTitle">s</a> -->
     {{#if loggedIn }}
       <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><i class="fas fa-home"></i> home</a>
+        <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" id="notificationsDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-bell"></i> <span class="badge badge-secondary badge-pill notifications-count" style="position:relative;top:-1px;"></span>
+          <span class="navbar-icon-notifications"></span> <span class="badge badge-secondary badge-pill notifications-count" style="position:relative;top:-1px;"></span>
         </a>
         <div class="dropdown-menu py-0" aria-labelledby="notificationsDropdownLink">
           <ul class="list-group list-group-flush" id="notificationsContainer">
           </ul>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><i class="fas fa-seedling"></i> communities</a>
-      </li>
       <li class="nav-item dropdown">
         <a class="nav-link {{#eq activePage loggedInUserData.username}}active{{/eq}} dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-at"></i> {{loggedInUserData.username}}
+          <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
           <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-user-circle"></i> profile</a>
@@ -60,7 +54,10 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><i class="fas fa-search"></i> search</a>
+        <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span></a>
       </li>
     {{else}}
       <li class="nav-item">
