Okay that should be it

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -27,7 +27,7 @@
     {{/if}}
   </ul>
 
-  <ul class="nav ml-auto col-8" id="navbarMenuDesktop" role="navigation">
+  <ul class="nav ml-auto col-8 px-4" id="navbarMenuDesktop" role="navigation">
     <!-- <a class="navbar-brand" href="/" id="navTitle">s</a> -->
     {{#if loggedIn }}
       <li class="nav-item">
