numerous spite-based edits to the image uploader code

--- a/public/css/image-upload-preview.css
+++ b/public/css/image-upload-preview.css
@@ -53,7 +53,7 @@
         background-color: #EDEDE8;
         border-left: 1px solid #c0c0af;
         box-sizing: border-box; }
-  .custom-file-container__image-preview {
+  .image-preview {
     overflow: hidden;
     box-sizing: border-box;
     transition: all 0.2s ease;
@@ -79,7 +79,7 @@
     width: 29.615861214%;
     height: 90px;
     box-shadow: 0 4px 10px 0 rgba(51, 51, 51, 0.25); }
-    .custom-file-container__image-multi-preview__single-image-clear {
+    .image-dclear {
       color: #000000;
       left: -6px;
       background: #EDEDE8;
@@ -90,10 +90,10 @@
       text-align: center;
       margin-top: -6px;
       box-shadow: 0 4px 10px 0 rgba(51, 51, 51, 0.25); }
-      .custom-file-container__image-multi-preview__single-image-clear:hover {
+      .imaged-clear:hover {
         background: #cbcbbd;
         cursor: pointer; }
-      .custom-file-container__image-multi-preview__single-image-clear__icon {
+      .image-dclear__icon {
         color: #6a6a53;
         display: block;
         margin-top: -2px; }
