--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -11,11 +11,11 @@
     <input type="hidden" id="postImageTags" name="postImageTags"/>
     <div class="custom-file-container" data-upload-id="postImageUpload">
     <label style="display:none" class="custom-file-container__custom-file" >
-      <input type="file" class="custom-file-container__custom-file__custom-file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage">
+      <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage">
       <input type="hidden" name="MAX_FILE_SIZE" value="10485760" />
-      <span class="custom-file-container__custom-file__custom-file-control"></span>
+      <span class="file-control"></span>
     </label>
-    <div class="custom-file-container__image-preview"><a href="javascript:void(0)" class="custom-file-container__image-clear" title="Clear Image"><i class="fas fa-times"></i></a></div>
+    <div class="image-preview"><a href="javascript:void(0)" class="image-clear" title="Clear Image"><i class="fas fa-times"></i></a></div>
     </div>
     <input type="text" class="form-control mb-3" name="postImageDescription" id="postImageDescription" placeholder="Describe this image for people using screen readers." {{#if sessionFlash.errorImageDescription }}value="{{sessionFlash.errorImageDescription}}"{{/if}}/>
   </div>
