--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -3,7 +3,7 @@ $(function() {
   $("#postContent").focus(function(){
     $(".post-controls").css('display', 'flex');
   })
-  upload = new FileUploadWithPreview('postImageUpload')
+  //upload = new FileUploadWithPreview('postImageUpload')
   $("#postContentWarningsButton").click(function(){
     $("#postContentWarningsContainer").slideToggle("fast");
   })
@@ -30,19 +30,26 @@ $(function() {
     }
   })
   $("#postImageButton").click(function(){
-    upload.selectImage();
+    $(".file-input").click();
     let imagePrevCont = $('.custom-file-container')[0];
     imagePrevCont.style.display = "block"
     imagePrevCont.style.height = (imagePrevCont.parentElement.parentElement.offsetWidth * (2.0/3))+"px";
     $('#imagePreviewContainer').slideDown('fast');
   })
-  window.addEventListener('fileUploadWithPreview:imageSelected', function (e) {
-    if (e.detail.uploadId === 'postImageUpload') {
+  $(".file-input").change(function (e) {
+      //let fr = new FileReader();
+      //fr.readAsDataURL(this.files[0]);
       var submitButtonValue = $("#postSubmit").html()
       $("#postSubmit").html("<i class='fas fa-spinner fa-spin'></i> Uploading").prop('disabled', true);
+      
+      let fr = new FileReader();
+      fr.onload = function(e){
+        $(".image-preview")[0].style.backgroundImage = "url("+e.target.result+")";
+      }
+      fr.readAsDataURL(this.files[0]);
       var fd = new FormData();
-      fd.append('image', e.detail.cachedFileArray[0]);
-      $.ajax({
+      fd.append('image', this.files[0]);
+      var imageUploadReq = $.ajax({
         url: '/api/image/v2',
         type: 'POST',
         data: fd,
@@ -59,12 +66,23 @@ $(function() {
           }
         }
         else {
-          $("#postImageUrl").val(uploadedImage.url)
-          $("#postImageTags").val(uploadedImage.tags)
+          $("#postImageUrl").val(uploadedImage.url);
+          $("#postImageTags").val(uploadedImage.tags);
           $("#postSubmit").html(submitButtonValue).prop('disabled', false);
         }
+      });
+      $(".image-clear").click(function(e){
+        if(imageUploadReq.readyState != 4){
+          imageUploadReq.abort();
+        }else{
+          console.log("delete image on server here");
+          ;;;//placeholder for deleting the image on the server
+        }
+        $("#postImageUrl").val("");
+        $("#postImageTags").val("");
+        $("#postSubmit").html(submitButtonValue).prop('disabled', false);
+        $(".image-preview")[0].style.backgroundImage = "url(/images/imagePreviewWindowDefault.jpg)";
       })
-    }
   })
   // document.onpaste = function(event){
   //   var items = (event.clipboardData || event.originalEvent.clipboardData).items;
