--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -37,8 +37,6 @@ $(function() {
     $('#imagePreviewContainer').slideDown('fast');
   })
   $(".file-input").change(function (e) {
-      //let fr = new FileReader();
-      //fr.readAsDataURL(this.files[0]);
       var submitButtonValue = $("#postSubmit").html()
       $("#postSubmit").html("<i class='fas fa-spinner fa-spin'></i> Uploading").prop('disabled', true);
       
@@ -47,6 +45,7 @@ $(function() {
         $(".image-preview")[0].style.backgroundImage = "url("+e.target.result+")";
       }
       fr.readAsDataURL(this.files[0]);
+
       var fd = new FormData();
       fd.append('image', this.files[0]);
       var imageUploadReq = $.ajax({
@@ -72,19 +71,20 @@ $(function() {
           $("#postImageUrl").val(uploadedImage.url);
           $("#postImageTags").val(uploadedImage.tags);
           $("#postSubmit").html(submitButtonValue).prop('disabled', false);
+          $("#postContent").removeAttr("required");
         }
       });
       $(".image-clear").click(function(e){
         if(imageUploadReq.readyState != 4){
           imageUploadReq.abort();
         }else{
-          console.log("delete image on server here");
           let jsonResponse = JSON.parse(imageUploadReq.responseText);
           $.post( "/cleartempimage", { imageURL: jsonResponse.url } );
         }
         $("#postImageUrl").val("");
         $("#postImageTags").val("");
         $("#postSubmit").html(submitButtonValue).prop('disabled', false);
+        $("#postContent").prop('required',true);
         $(".image-preview")[0].style.backgroundImage = "url(/images/imagePreviewWindowDefault.jpg)";
       })
   })
