Login etc. forms centered on page - not sure why this stopped working!

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,6 +391,7 @@ hr {
     max-width: 380px;
     padding: 1em;
     border-radius: 4px;
+    margin: 1em auto;
     /*border property moved to colors section*/
 }
 
