--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -4,9 +4,9 @@
       <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage" src="{{#if profileData.imageEnabled}}/images/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
     </div>
   </div>
-  <div class="col-6 d-flex justify-content-end">
+  <div class="col-6 d-flex align-items-start">
     {{#if isOwnProfile}}
-      <div class="btn-group-vertical" role="group" aria-label="Basic example">
+      <div class="btn-group-vertical w-100" role="group" aria-label="Profile control buttons">
         <button type="button" class="btn btn-outline-secondary" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
         <a href="/settings" class="btn btn-outline-secondary"><i class="fas fa-cog"></i> Settings</a>
         <a href="/logout" class="btn btn-outline-secondary"><i class="fas fa-sign-out-alt"></i> Log out</a>
