--- a/views/partials/communitysidebar.handlebars
+++ b/views/partials/communitysidebar.handlebars
@@ -2,7 +2,7 @@
   <img alt="Display image for the community '{{ communityData.name }}'" id="profileImage" src="{{#if communityData.imageEnabled}}/images/communities/{{communityData.image}}{{else}}/images/communities/cake.svg{{/if}}" />
 </div>
 
-<h3 style="font-family:'Roboto Mono',monospace;border-bottom:2px solid #ce1717;padding-bottom:10px;margin-bottom:20px;">
+<h3 class="page-header">
   <a href="/community/{{communityData.slug}}" class="text-dark">{{ communityData.name }}</a>
 </h3>
 
