--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -28,37 +28,44 @@
     {{/if}}
   </ul>
 
-  <ul class="nav ml-auto col-8 px-4" id="navbarMenuDesktop" role="navigation">
+  <ul class="nav" id="navbarMenuDesktop" role="navigation">
     {{#if loggedIn }}
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span><span class="screenreader-text"> Home</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" id="notificationsDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span class="navbar-icon-notifications"></span> <span class="badge badge-secondary badge-pill notifications-count"></span><span class="screenreader-text"> Notifications</span>
-        </a>
-        <div class="dropdown-menu py-0" aria-labelledby="notificationsDropdownLink">
-          <ul class="list-group list-group-flush" id="notificationsContainer">
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link {{#eq activePage loggedInUserData.username}}active{{/eq}} dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
-          <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-user-circle"></i> profile</a>
-          <a class="dropdown-item" href="/settings"><i class="fas fa-cog"></i> settings</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/logout"><i class="fas fa-cookie-bite"></i> log out</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="screenreader-text"> Communities</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span><span class="screenreader-text"> Search</span></a>
-      </li>
+      <div class="navbar-group" id="navbarLeftGroup">
+        <li class="nav-item">
+          <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span><span class="nav-link-text">Home</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" id="notificationsDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="navbar-icon-notifications"></span> <span class="badge badge-secondary badge-pill notifications-count"></span><span class="nav-link-text">Notifications</span>
+          </a>
+          <div class="dropdown-menu py-0" aria-labelledby="notificationsDropdownLink">
+            <ul class="list-group list-group-flush" id="notificationsContainer">
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="nav-link-text">Communities</span></a>
+        </li>
+      </div>
+      <div class="navbar-group" id="navbarCentreGroup">
+        <li class="nav-item dropdown">
+          <a class="nav-link {{#eq activePage loggedInUserData.username}}active{{/eq}} dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
+            <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-user-circle"></i> profile</a>
+            <a class="dropdown-item" href="/settings"><i class="fas fa-cog"></i> settings</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/logout"><i class="fas fa-cookie-bite"></i> log out</a>
+          </div>
+        </li>
+      </div>
+      <div class="navbar-group" id="navbarRightGroup">
+        <input id="navbarSearchField" class="form-control" type="search" placeholder="Search" aria-label="Search" />
+        <li class="nav-item">
+          <a id="navbarSearchButton" class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span><span class="screenreader-text"> Search</span></a>
+        </li>
+      </div>
     {{else}}
       <li class="nav-item">
         <a class="nav-link" href="/login">log in</a>
