--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<h3 style="font-family:'Roboto Mono',monospace;border-bottom:2px solid #ce1717;padding-bottom:10px;margin-bottom:20px;">
+<h3 class="page-header">
   {{#if profileData.displayName }}
     {{ profileData.displayName }}
   {{/if}}
