--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -1,6 +1,6 @@
 <div id="homeBody" class="row justify-content-center">
   <div class="col-lg-8">
-    <h3 id="searchTitle" class="mx-2" style="font-family:'Roboto Mono',monospace;border-bottom:2px solid #ce1717;padding-bottom:10px;margin-bottom:20px;">Settings</h3>
+    <h3 class="page-header mx-2">Settings</h3>
     <form id="settingsForm" method="post" action="/updatesettings">
       <div class="form-group">
         <label for="profileVisibility">Profile page and public posts visibility</label>
