--- a/views/tag.handlebars
+++ b/views/tag.handlebars
@@ -1,6 +1,6 @@
 <div id="homeBody" class="row justify-content-center">
   <div class="col-lg-8">
-    <h3 class="mx-2" style="font-family:'Roboto Mono',monospace;border-bottom:2px solid #ce1717;padding-bottom:10px;margin-bottom:20px;">#{{name}}</h3>
+    <h3 class="page-header mx-2">#{{name}}</h3>
 		<div class="container commentsList" id="postsContainer">
 		</div>
     {{> infinitescrollrequests}}
