--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -6,7 +6,7 @@
       {{#contains visibleSidebarArray profileData.settings.profileVisibility}}
         {{> usersidebar}}
       {{else}}
-        <h3 style="font-family:'Roboto Mono',monospace;border-bottom:2px solid #ce1717;padding-bottom:10px;margin-bottom:20px;">
+        <h3 class="page-header">
           @{{ profileData.username}}
         </h3>
         <p>
